GNOME Bugzilla – Bug 732912
v4l2src: Does not activate its pool when not pushing from it
Last modified: 2014-07-09 19:27:36 UTC
In this case, another pool is given to the base class, and the internal pool never get activated. This lead to an assertion. It's now required to explicitly activate pool. This need to be fixed before 1.4, patch coming.
Created attachment 280177 [details] [review] [PATCH] v4l2src: Ensure internal pool activation Before we would hit an assertion "'gst_buffer_pool_is_active (bpool)' failed" if the internal pool was not used to push buffer downstrea, hence not given to the baseclass. https://bugzilla.gnome.org/show_bug.cgi?id=73291 --- sys/v4l2/gstv4l2src.c | 13 +++++++++++++ 1 file changed, 13 insertions(+)
Comment on attachment 280177 [details] [review] [PATCH] v4l2src: Ensure internal pool activation commit 12a3bdbd09abd8535d50a7c6c049e076b0e99be3 Author: Nicolas Dufresne <nicolas.dufresne@collabora.com> Date: Tue Jul 8 13:34:28 2014 -0400 v4l2src: Ensure internal pool activation Before we would hit an assertion "'gst_buffer_pool_is_active (bpool)' failed" if the internal pool was not used to push buffer downstrea, hence not given to the baseclass. https://bugzilla.gnome.org/show_bug.cgi?id=732912